<resources>
    <string name="app_name">WaterRessource</string>
    <string name="add">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">login</string>
    <string name="amazone_sigin_invite">Sign in to <b>Zappos.com</b> using your Amazon account</string>
    <string name="sign_in">Sign in</string>
    <string name="email_phone_for_mobile_account">Email (phone for mobile account)</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="keep_me_sign_in">Keep Me Sign In. </string>
    <string name="sign_in_btn">Sign in</string>
    <string name="new_to_amazone">New To Amazone</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="conditions_of_use_of_privacy_notice">Conditions of Use of Privacy Notice</string>
    <string name="amzone_copyright">\@ 1996-2017, Amazon, Inc. or its affiliates</string>
    <string name="amazone_logo">amazone logo</string>
</resources>